--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
 img{
     height: 200px;
     width: 200px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -25px;
 }
 blockquote {
     margin-left: 0;
@@ -11,6 +15,41 @@ blockquote {
     margin-right: 40px;
   }
 hr{
-    height: 1px;
+    height: 2px;
+    background-color: brown;
     border-color: blue;
+}
+.main{
+    width:80%;
+    background-color: burlywood;
+    margin-left:auto;
+    margin-right:auto;
+    padding:20px;
+    max-width:500px;
+}
+h1,h2{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+.established{
+    font-style: italic;
+}
+a{
+    color: black;
+}
+a:visited { 
+    color: black; 
+}
+a:hover { 
+    color: brown;
+}
+a:active { 
+    color: brown; 
+}
+h1,figcaption,p{
+    text-align: center;
+}
+h1{
+    font-size: 40px;
+    margin-top: 0;
+    margin-bottom: 15px;
 }
