--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ blockquote {
     margin-bottom: 1em;
     margin-left: 40px;
     margin-right: 40px;
+    text-align: center;
   }
 hr{
     height: 2px;
