--- a/styles.css
+++ b/styles.css
@@ -15,9 +15,11 @@ blockquote {
     margin-right: 40px;
     text-align: center;
   }
-hr{
-    height: 2px;
-}
+  hr {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+  }
 h1,h2{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
@@ -43,4 +45,53 @@ h1{
     font-size: 40px;
     margin-top: 0;
     margin-bottom: 15px;
+}
+.title{
+        text-align: center;
+    }
+
+.tributes-grid{
+        display: grid;
+        grid-template-columns: 50% 50%;
+    }
+
+.tribute-image {
+        border-radius: 5px;
+        box-shadow: 0 4px 6px 0 rgba(34, 60, 80, .16);
+        transition: all ease-in-out .2s;
+    }
+    
+.tribute-image{
+        justify-self: center;
+        padding: 4%;
+    }
+
+.tribute-image:hover {
+        filter: brightness(.75);
+        box-shadow: 0 8px 12px 0 rgba(34, 60, 80, .16);
+    }
+    
+.tribute-image-wrapper {
+        justify-self: center;
+        padding: 4%;
+        position: relative;
+    }
+
+.tribute-image-wrapper:hover > h4 {
+        visibility: visible;
+    }
+
+.tribute-image-wrapper > h4 {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: white;
+        visibility: hidden;
+        z-index: 2;
+        transition: all ease-in-out .2s;
+    }
+ @media (max-width: 650px) {
+        .title {
+            grid-template-columns: 100%;
 }
